--- a/public/index.html
+++ b/public/index.html
@@ -39,8 +39,10 @@
     </section>
 
     <footer>
+      &copy; 2017 What'sPup! Group
     </footer>
 
+    <!-- script tags  -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="/vendor/scripts/handlebars.js"></script>
     <script src="/vendor/scripts/page.js"></script>
