Added Form to html

--- a/public/index.html
+++ b/public/index.html
@@ -24,12 +24,16 @@
       <h2>Home Page</h2>
       <p>Description</p>
       <form id="form-home">
+        <h3>Please Enter Zip Code</h3>
+        <input type="numbers" name="postal-code" />
       </form>
     </section>
 
     <section id="results" class="tab-content">
       <h2>Results</h2>
       <form id="form-results">
+        <h3>Please Enter Zip Code</h3>
+        <input type="numbers" name="zip-code" />
       </form>
       <!-- map hardcoded in -->
     </section>
@@ -44,7 +48,7 @@
 
     <!-- script tags  -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="/vendor/scripts/handlebars.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.4/handlebars.js"></script>
     <script src="/vendor/scripts/page.js"></script>
 
     <script src="/scripts/model/results.js"></script>
