--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/vendor/styles/normalize.css">
 
-    <script id="event-template"  type="text/x-handlebars-template"></script>
+    <script id="event-template" type="text/x-handlebars-template">
+      <h1>{{name}}</h1>
+      <p>{{link}}</p>
+      <p>Category: {{category}}</p>
+    </script>
   </head>
 
   <body>
