Created button and form

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
       <form id="form-home">
         <h3>Please Enter Zip Code</h3>
         <input type="numbers" name="postal-code" />
+        <button type="submit">Fetch!</button>
       </form>
     </section>
 
@@ -34,6 +35,7 @@
       <form id="form-results">
         <h3>Please Enter Zip Code</h3>
         <input type="numbers" name="zip-code" />
+        <button type="submit">Fetch!</button>
       </form>
       <!-- map hardcoded in -->
     </section>
