--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title>MeetPup</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/vendor/styles/normalize.css">
+    <link rel="stylehseet" href="/public/styles/base.css">
 
     <script id="event-template"  type="text/x-handlebars-template"></script>
   </head>
@@ -44,8 +45,6 @@
 
     <!-- script tags  -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="/vendor/scripts/handlebars.js"></script>
-    <script src="/vendor/scripts/page.js"></script>
 
     <script src="/scripts/model/results.js"></script>
 
