--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <title>MeetPup</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/vendor/styles/normalize.css">
-    <link rel="stylehseet" href="/public/styles/base.css">
+    <link rel="stylesheet" href="/styles/base.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
 
     <script id="event-template" type="text/x-handlebars-template">
       <h1>{{name}}</h1>
