--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
 
   <body>
     <header>
+      <img src="/images/logo/Logo-large.png"/>
       <nav class="nav">
         <span class="icon-menu3"></span>
         <ul>
