--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,9 @@
 
   <body>
     <header>
-      <img src="/images/logo/Logo-large.png"/>
       <nav class="nav">
         <span class="icon-menu3"></span>
+        <img src="/images/logo/Logo-large.png"/>
         <ul>
           <li><a href="#home">Home</a></li>
           <li><a href="#results">Results</a></li>
@@ -58,6 +58,7 @@
     </section>
 
     <footer>
+      <img src="/images/logo/Logo-paw.png" class="logo-small"/> 
       &copy; 2017 What'sPup! Group
     </footer>
 
