favicon and footer css

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>MeetPup</title>
+    <link rel="icon" type="image/png" href="/images/logo/Logo-paw.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/vendor/styles/normalize.css">
     <link rel="stylesheet" href="/styles/base.css">
@@ -58,8 +59,8 @@
     </section>
 
     <footer>
-      <img src="/images/logo/Logo-paw.png" class="logo-small"/> 
-      &copy; 2017 What'sPup! Group
+      <p>&copy; 2017 What'sPup! Group</p>
+      <img src="/images/logo/Logo-paw.png" class="logo-small"/>
     </footer>
 
     <!-- script tags  -->
