--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,9 @@
         <span class="icon-menu3"></span>
         <img src="/images/logo/Logo-large.png"/>
         <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#results">Results</a></li>
-          <li><a href="#about">About</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/results">Results</a></li>
+          <li><a href="/about">About</a></li>
         </ul>
       </nav>
 
