Add Google Map embed

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
         <input type="numbers" name="zip-code" />
         <button type="submit">Fetch!</button>
       </form>
-      <!-- map hardcoded in -->
+      <iframe src="https://www.google.com/maps/embed/v1/view?key=AIzaSyAioms9LDyfCohvTY_yx62j2O2q0WhqFCw&center=47.618217,-122.3540207&zoom=10" width="600" height="450" frameborder="0" style="border=0"></iframe>
     </section>
 
     <section id="about" class="tab-content">
