added button event handler and resultsController.setZipCode function

--- a/public/index.html
+++ b/public/index.html
@@ -39,8 +39,8 @@
       <p>Description</p>
       <form id="form-home">
         <h3>Please Enter Zip Code</h3>
-        <input type="numbers" name="postal-code" />
-        <button type="submit">Fetch!</button>
+        <input id="homeInput" type="numbers" name="postal-code" />
+        <button id="homeSubmitButton" type="submit">Fetch!</button>
       </form>
     </section>
 
