Working on about page

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,31 @@
     </section>
 
     <section id="about" class="tab-content">
-      <h2>About</h2>
+      <h2>About The Developers</h2>
+      <div class="flip-container">
+        <div class="flipper">
+          <div class="front">
+            <img src="/imgs/kay.jpg" class="circularImage" id="kay">
+            <p>Kaylee Alvarado</p>
+          </div>
+          <div class="back">
+            <img src="/imgs/joejoe.jpg" class="circularImage" id="kayDog">
+            <p>Joe Joe | Bichon Frise</p>
+          </div>
+        </div>
+      </div>
+      <div class="flip-container">
+        <div class="flipper">
+          <div class="front">
+            <img src="" class="circularImage" id="teddy">
+            <p>David Teddy</p>
+          </div>
+          <div class="back">
+            <img src="/imgs/herley.jpg" class="circularImage" id="teddyDog">
+            <p>Herley | Dalmation Mix</p>
+          </div>
+        </div>
+      </div>
     </section>
 
     <footer>
