Move getEvents into IFFE
This also sets up framework for extracting location data from the
 results.

--- a/public/index.html
+++ b/public/index.html
@@ -48,8 +48,8 @@
       <h2>Results</h2>
       <form id="form-results">
         <h3>Please Enter Zip Code</h3>
-        <input type="numbers" name="zip-code" />
-        <button type="submit">Fetch!</button>
+        <input id="resultsInput" type="numbers" name="zip-code" />
+        <button id="resultsSubmitButton" type="submit">Fetch!</button>
       </form>
       <iframe src="https://www.google.com/maps/embed/v1/view?key=AIzaSyAioms9LDyfCohvTY_yx62j2O2q0WhqFCw&center=47.618217,-122.3540207&zoom=10" width="600" height="450" frameborder="0" style="border=0"></iframe>
     </section>
