--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
           <div class="flipper">
             <div class="front">
               <img src="/imgs/abbi.jpg" class="circularImage" id="abbi">
-              <h3>Abigail White | Alien</h3>
+              <h3 class="devName">Abigail White | Alien</h3>
             </div>
             <div class="back">
               <img src="/imgs/hobbes.jpg" class="circularImage dogImage" id="abbiDog">
@@ -73,7 +73,7 @@
           <div class="flipper">
             <div class="front">
               <img src="" class="circularImage" id="robert">
-              <h3>Robert Hatfield | Human Being</h3>
+              <h3 class="devName">Robert Hatfield | Human Being</h3>
             </div>
             <div class="back">
               <img src="/imgs/herley.jpg" class="circularImage dogImage" id="robertDog">
@@ -85,7 +85,7 @@
           <div class="flipper">
             <div class="front">
               <img src="/imgs/kay.jpg" class="circularImage" id="kay">
-              <h3>Kaylee Alvarado | Human Being</h3>
+              <h3 class="devName">Kaylee Alvarado | Human Being</h3>
               <p>Originally from Issaquah, WA, Kaylee was first introduced to coding during her freshman year of college. She ultimately decided that a four-year university wasn't for her, so she signed up for a JavaScript 101 course at Code Fellows and hasn't looked back since. Once she finishes her education, she hopes to land a job as a junior full-stack JS developer in San Francisco.</p>
             </div>
             <div class="back">
@@ -98,7 +98,7 @@
           <div class="flipper">
             <div class="front">
               <img src="/imgs/teddy.jpg" class="circularImage" id="teddy">
-              <h3>David Teddy | Human Being</h3>
+              <h3 class="devName">David Teddy | Human Being</h3>
               <p>David Teddy live a life of adventure through the military and was cut short due to having Crohns disease. After living the amazing life of a military person, decided to pursue a life as a Toyota Technician/ Master Technician and found that there was just not enough jobs, nor enough money to be made. After finding out that his soon to be wife was pregnant, Teddy decided to follow a course that he thought would be too difficult for him to do. His daughter decided she wanted to come 3 months early and he knew he needed to decided that computers and web design was the life for him.  After hearing about Code Fellows from the radio and the internet decided to do research and found that he was able to do something that he loved. Teddy is currently going through 301 and hopefully completing 401 JavaScript to be a full-stack developer to provide an amazing life for his daughter Harper and future wife Stacie.</p>
             </div>
             <div class="back">
