--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,7 @@
         <input class="input" type="numbers" name="zip-code" />
         <button id="resultsSubmitButton" type="submit">Fetch!</button>
       </form>
+      <p id="message"></p>
       <iframe src="https://www.google.com/maps/embed/v1/view?key=AIzaSyAioms9LDyfCohvTY_yx62j2O2q0WhqFCw&center=47.618217,-122.3540207&zoom=10" width="600" height="450" frameborder="0" style="border=0"></iframe>
     </section>
 
@@ -62,7 +63,7 @@
             <div class="front">
               <img src="/imgs/abbi.jpg" class="circularImage" id="abbi">
               <h3 class="devName">Abigail White | Alien</h3>
-              <p class="bio"></p>
+              <p class="bio">Abigail White was born on March 26, 1985, in London, England. She made her film debut at the age of 9 in A Village Affair (1994). Her first major part came in Star Wars: Episode 1-The Phantom Menace and she then became well-known for her performance as tomboy footballer Juliette "Jules" Paxton in Bend It Like Beckham. Her later films include Atonement, Pirates of the Caribbean, A Dangerous Method and Anna Karenina. She has also earned Oscar nominations for her roles in Pride & Prejudice and The Imitation Game.</p>
             </div>
             <div class="back">
               <img src="/imgs/hobbes.jpg" class="circularImage dogImage" id="abbiDog">
@@ -78,8 +79,8 @@
               <p class="bio"></p>
             </div>
             <div class="back">
-              <img src="/imgs/herley.jpg" class="circularImage dogImage" id="robertDog">
-              <h3>Robert's Dream Dog | Beagle</h3>
+              <img src="/imgs/peanut.jpg" class="circularImage dogImage" id="robertDog">
+              <h3>Peanut | Dachshund</h3>
             </div>
           </div>
         </div>
