--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,6 @@
   <link rel="stylesheet" href="/styles/base.css">
   <link rel="stylesheet" href="/styles/layout.css">
   <link rel="stylesheet" href="/styles/module.css">
-
   <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
 
   <script id="event-template" type="text/x-handlebars-template">
@@ -23,17 +22,14 @@
     <header>
       <nav class="nav">
         <span class="icon-menu3"></span>
-        <img src="/images/logo/Logo-large.png"/>
+        <img id="logoImage" src="/images/logo/Logo-large.png"/>
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="/results">Results</a></li>
           <li><a href="/about">About</a></li>
         </ul>
       </nav>
-
-      <!-- logo image -->
     </header>
-
     <section id="home" class="tab-content">
       <h2>Welcome to MeetPup!</h2>
       <p>Have you ever wondered what local pup groups are out there? We've got the answer! Enter your zip code below to check out what dog meetups are in your community.</p>
@@ -43,7 +39,6 @@
         <button id="homeSubmitButton" type="submit">Fetch!</button>
       </form>
     </section>
-
     <section id="results" class="tab-content">
       <h2>Results</h2>
       <form id="form-results">
@@ -54,19 +49,18 @@
       <p id="message"></p>
       <iframe src="https://www.google.com/maps/embed/v1/view?key=AIzaSyAioms9LDyfCohvTY_yx62j2O2q0WhqFCw&center=47.618217,-122.3540207&zoom=10" width="600" height="450" frameborder="0" style="border=0"></iframe>
     </section>
-
     <section id="about" class="tab-content">
       <h2>About The Developers</h2>
       <div class="twoByTwo">
         <div class="flip-container">
           <div class="flipper">
             <div class="front">
-              <img src="/imgs/abbi.jpg" class="circularImage" id="abbi">
+              <img src="/images/abbi.jpg" class="circularImage" id="abbi">
               <h3 class="devName">Abigail White | Alien</h3>
               <p class="bio">Abigail White was born on March 26, 1985, in London, England. She made her film debut at the age of 9 in A Village Affair (1994). Her first major part came in Star Wars: Episode 1-The Phantom Menace and she then became well-known for her performance as tomboy footballer Juliette "Jules" Paxton in Bend It Like Beckham. Her later films include Atonement, Pirates of the Caribbean, A Dangerous Method and Anna Karenina. She has also earned Oscar nominations for her roles in Pride & Prejudice and The Imitation Game.</p>
             </div>
             <div class="back">
-              <img src="/imgs/hobbes.jpg" class="circularImage dogImage" id="abbiDog">
+              <img src="/images/hobbes.jpg" class="circularImage dogImage" id="abbiDog">
               <h3>Hobbes | Maltese Mix</h3>
             </div>
           </div>
@@ -79,7 +73,7 @@
               <p class="bio"></p>
             </div>
             <div class="back">
-              <img src="/imgs/peanut.jpg" class="circularImage dogImage" id="robertDog">
+              <img src="/images/peanut.jpg" class="circularImage dogImage" id="robertDog">
               <h3>Peanut | Dachshund</h3>
             </div>
           </div>
@@ -87,12 +81,12 @@
         <div class="flip-container">
           <div class="flipper">
             <div class="front">
-              <img src="/imgs/kay.jpg" class="circularImage" id="kay">
+              <img src="/images/kay.jpg" class="circularImage" id="kay">
               <h3 class="devName">Kaylee Alvarado | Human Being</h3>
               <p class="bio">Originally from Issaquah, WA, Kaylee was first introduced to coding during her freshman year of college. She ultimately decided that a four-year university wasn't for her, so she signed up for a JavaScript 101 course at Code Fellows and hasn't looked back since. Once she finishes her education, she hopes to land a job as a junior full-stack JS developer in San Francisco.</p>
             </div>
             <div class="back">
-              <img src="/imgs/joejoe.jpg" class="circularImage dogImage" id="kayDog">
+              <img src="/images/joejoe.jpg" class="circularImage dogImage" id="kayDog">
               <h3>Joe-Joe | Bichon Frise</h3>
             </div>
           </div>
@@ -100,12 +94,12 @@
         <div class="flip-container">
           <div class="flipper">
             <div class="front">
-              <img src="/imgs/teddy.jpg" class="circularImage" id="teddy">
+              <img src="/images/teddy.jpg" class="circularImage" id="teddy">
               <h3 class="devName">David Teddy | Human Being</h3>
               <p class="bio">David Teddy was a military man who loved the life until tragically got medically retired. He realized after not making enough to support his family he needed a life change and always loved coding and decided to become a hacker. After doing a ton of research decided to become part of the Code Fellows family and realized he loved the life of coding.</p>
             </div>
             <div class="back">
-              <img src="/imgs/herley.jpg" class="circularImage dogImage" id="teddyDog">
+              <img src="/images/herley.jpg" class="circularImage dogImage" id="teddyDog">
               <h3>Herley | Dalmation Mix</h3>
             </div>
           </div>
@@ -119,22 +113,20 @@
   </footer>
 
   <!-- script tags  -->
+  <!-- libraries -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.4/handlebars.js"></script>
   <script src="/vendor/scripts/page.js"></script>
-
+  <!-- models -->
   <script src="/scripts/model/results.js"></script>
-
+  <!-- views -->
   <script src="/scripts/view/aboutView.js"></script>
   <script src="/scripts/view/homeView.js"></script>
   <script src="/scripts/view/resultsView.js"></script>
-
-
+  <!-- controllers -->
   <script src="/scripts/controller/aboutController.js"></script>
   <script src="/scripts/controller/homeController.js"></script>
   <script src="/scripts/controller/resultsController.js"></script>
-
   <script src="/scripts/controller/routes.js"></script>
-
 </body>
 </html>
