--- a/public/index.html
+++ b/public/index.html
@@ -127,13 +127,14 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.4/handlebars.js"></script>
   <script src="/vendor/scripts/page.js"></script>
+      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPM0MjFCROm6alfbME3NmOwuXIHev6WVM"></script>
 
   <script src="/scripts/model/results.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPM0MjFCROm6alfbME3NmOwuXIHev6WVM&callback=initMap"></script>
+
   <script src="/scripts/view/aboutView.js"></script>
   <script src="/scripts/view/homeView.js"></script>
   <script src="/scripts/view/resultsView.js"></script>
-
+    <!-- &callback=initMap -->
 
   <script src="/scripts/controller/aboutController.js"></script>
   <script src="/scripts/controller/homeController.js"></script>
