form is showing

--- a/public/index.html
+++ b/public/index.html
@@ -45,20 +45,16 @@
       <h2>Welcome to MeetPup!</h2>
       <p>Have you ever wondered what local pup groups are out there? We've got the answer! Enter your zip code below to check out what dog meetups are in your community.</p>
     </section>
+
       <form id="form-home">
         <h3 class="zipH3">Please Enter Zip Code:</h3>
-        <input class="input" type="numbers" name="postal-code" />
+        <input type="numbers" name="postal-code" />
         <button id="homeSubmitButton" type="submit">Fetch!</button>
       </form>
 
     <section id="results" class="tab-content">
       <h2>Results</h2>
-      <!-- <form id="form-results">
-        <h3 class="zipH3">Please Enter Zip Code:</h3>
-        <input class="input" type="numbers" name="zip-code" />
-        <button id="resultsSubmitButton" type="submit">Fetch!</button>
-      </form> -->
-<p id="message"></p>
+      <p id="message"></p>
 
       <div id="map"><p>Google Map Div</p></div>
     </section>
