--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
 
       <form id="form-home">
         <h3 class="zipH3">Please Enter Zip Code:</h3>
-        <input type="numbers" name="postal-code" />
+        <input id="zipInput" type="numbers" name="postal-code" />
         <button id="homeSubmitButton" type="submit">Fetch!</button>
       </form>
 
