--- a/public/index.html
+++ b/public/index.html
@@ -47,11 +47,7 @@
         <input id="zipInput" type="numbers" name="postal-code" />
         <button id="homeSubmitButton" type="submit">Fetch!</button>
       </form>
-<<<<<<< HEAD
     </section>
-=======
-
->>>>>>> 5d7fc9a47ae4aa1072330258b7e9612a6ef65a9f
     <section id="results" class="tab-content">
       <h2>Results</h2>
       <p id="message"></p>
@@ -66,7 +62,7 @@
             <div class="front">
               <img src="/images/abbi.jpg" class="circularImage" id="abbi">
               <h3 class="devName">Abigail White | Alien</h3>
-              <p class="bio">Abigail White was born on March 26, 1985, in London, England. She made her film debut at the age of 9 in A Village Affair (1994). Her first major part came in Star Wars: Episode 1-The Phantom Menace and she then became well-known for her performance as tomboy footballer Juliette "Jules" Paxton in Bend It Like Beckham. Her later films include Atonement, Pirates of the Caribbean, A Dangerous Method and Anna Karenina. She has also earned Oscar nominations for her roles in Pride & Prejudice and The Imitation Game.</p>
+              <p class="bio">Abigail White was born on March 26, 1985, in London, England. She made her film debut at the age of 9 in A Village Affair (1994). Her first major part came in Star Wars: Episode 1-The Phantom Menace and she then became well-known for her performance as tomboy footballer Juliette "Jules" Paxton in Bend It Like Beckham. Her later films include Atonement, Pirates of the Caribbean, A Dangerous Method and Anna Karenina. She has also earned Oscar nominations for her roles in Pride and Prejudice and The Imitation Game.</p>
             </div>
             <div class="back">
               <img src="/images/hobbes.jpg" class="circularImage dogImage" id="abbiDog">
