--- a/public/index.html
+++ b/public/index.html
@@ -72,6 +72,7 @@
             <div class="back">
               <img src="/images/hobbes.jpg" class="circularImage dogImage" id="abbiDog">
               <h3 class="dog-name">Hobbes | Maltese Mix</h3>
+              <p class="bio">Hobbes is a fun-loving Maltese who spreads his Joy at every opportunity. He has been in love exactly one time with a small pup named Lily, until her family tragically moved away. Although Hobbes has never fully recovered, he has found purpose in other meaningful pursuits, such as running around in circles. He loves belly rubs and tug-a-war and sweet potato for dinner (stovetop cooked, not microwaved). Someday he hopes to catch a squirrel or a cat or something, even though he's not sure what he would do with it if he did.</p>
             </div>
           </div>
         </div>
