--- a/public/404.html
+++ b/public/404.html
@@ -2,11 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="icon" type="image/png" href="/images/logo/Logo-paw.png" />
     <link rel="stylesheet" href="/styles/base.css">
+    <link rel="stylesheet" href="styles/img.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
+
     <title>404</title>
   </head>
   <body>
-    <h1>Invalid route!</h1>
-    <img src="images/404.jpg" id="404img">
+    <p>Invalid Route! Go to <a href="/">homepage</a></p>
+    <img src="images/404.jpg" id="invalid-img"/>
   </body>
 </html>
