--- a/public/index.html
+++ b/public/index.html
@@ -61,25 +61,26 @@
             <div class="front">
               <img src="/images/abbi.jpg" class="circularImage" id="abbi">
               <h3 class="dev-name">Abigail White | Person</h3>
-              <p class="bio">Abigail White was born on March 26, 1985, in London, England. She made her film debut at the age of 9 in A Village Affair (1994). Her first major part came in Star Wars: Episode 1-The Phantom Menace and she then became well-known for her performance as tomboy footballer Juliette "Jules" Paxton in Bend It Like Beckham. Her later films include Atonement, Pirates of the Caribbean, A Dangerous Method and Anna Karenina. She has also earned Oscar nominations for her roles in Pride and Prejudice and The Imitation Game.</p>
+              <p class="bio">Abigail White was born on March 26, 1985, in London, England. She made her film debut at the age of 9 in A Village Affair (1994). Her first major part came in Star Wars: Episode 1-The Phantom Menace and then for her role as Juliette "Jules" Paxton in Bend It Like Beckham. Her later films include Atonement, Pirates of the Caribbean, A Dangerous Method and Anna Karenina. She has also earned Oscar nominations for her roles in Pride and Prejudice and The Imitation Game.</p>
             </div>
             <div class="back">
               <img src="/images/hobbes.jpg" class="circularImage dogImage" id="abbiDog">
               <h3 class="dog-name">Hobbes | Maltese Mix</h3>
-              <p class="bio">Hobbes is a fun-loving Maltese who spreads his Joy at every opportunity. He has been in love exactly one time with a small pup named Lily, until her family tragically moved away. Although Hobbes has never fully recovered, he has found purpose in other meaningful pursuits, such as running around in circles. He loves belly rubs and tug-a-war and sweet potato for dinner (stovetop cooked, not microwaved). Someday he hopes to catch a squirrel or a cat or something, even though he's not sure what he would do with it if he did.</p>
+              <p class="bio">Hobbes is a fun-loving Maltese who spreads his Joy at every opportunity. He has been in love exactly one time with a small pup named Lily, until her family tragically moved away. Although Hobbes has never fully recovered, he has found purpose in other meaningful pursuits, such as running around in circles. He loves belly rubs, tug-of-war and sweet potatoes (stovetop cooked, not microwaved). Someday he hopes to catch a squirrel or a cat or something, even though he's not sure what he would do with it if he did.</p>
             </div>
           </div>
         </div>
         <div class="flip-container">
           <div class="flipper">
             <div class="front">
-              <img src="" class="circularImage" id="robert">
-              <h3 class="dev-name">Robert Hatfield | Human Being</h3>
-              <p class="bio"></p>
+              <img src="/images/robert.jpg" class="circularImage" id="robert">
+              <h3 class="dev-name">Robert Hatfield | Just This Guy, You Know?</h3>
+              <p class="bio">After working for 16 years in telecommunications, a business reorganization prompted him to pursue a new career. Returning to a childhood interest in programming, he is now studying JavaScript and iOS development at Code Fellows in Seattle, WA.</p>
             </div>
             <div class="back">
               <img src="/images/peanut.jpg" class="circularImage dogImage" id="robertDog">
-              <h3 class="dog-name">Peanut | Dachshund</h3>
+              <h3 class="dog-name">Peanut | Miniature Dachshund</h3>
+              <p class="bio">Peanut was a Miniature Dachshund whose personality was anything but miniature. He enjoyed eating carrots, playing tug-of-war with his favorite blanket, and challenging the neighbors' <em>(wonderfully tolerant)</em> pit bull. He lived a full life with his older companion Muttski, a Great Dane / Labrador mix, and is remembered with fondness by his family.</p>
             </div>
           </div>
         </div>
@@ -107,6 +108,7 @@
             <div class="back">
               <img src="/images/herley.jpg" class="circularImage dogImage" id="teddyDog">
               <h3 class="dog-name">Herley | Dalmation Mix</h3>
+              <p class="bio">Hurley is a 3 year old dalmatian mix. He is a lover of fetch and cuddles. He doesn't like people knocking on his door or dogs peeing in his territory. He likes long walks and jumping for a frisbee and chasing a ball around. He sounds fercious when chasing you but in all actuality he's a lover not a fighter. Treats and attention is what he lives for.</p>
             </div>
           </div>
         </div>
