adding links to bios

--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,9 @@
             <div class="front">
               <img src="/images/abbi.jpg" class="circularImage" id="abbi">
               <h3 class="dev-name">Abigail White | Person</h3>
+              <img src="/images/icon-email.png"/><a href=""></a>
+              <img src="/images/Icon-GitHub.png"/><a href=""></a>
+              <img src="/images/icon-linked-in.png"><a href=""></a>
               <p class="bio">Abigail White was born on March 26, 1985, in London, England. She made her film debut at the age of 9 in A Village Affair (1994). Her first major part came in Star Wars: Episode 1-The Phantom Menace and she then became well-known for her performance as tomboy footballer Juliette "Jules" Paxton in Bend It Like Beckham. Her later films include Atonement, Pirates of the Caribbean, A Dangerous Method and Anna Karenina. She has also earned Oscar nominations for her roles in Pride and Prejudice and The Imitation Game.</p>
             </div>
             <div class="back">
@@ -75,6 +78,9 @@
             <div class="front">
               <img src="" class="circularImage" id="robert">
               <h3 class="dev-name">Robert Hatfield | Human Being</h3>
+              <img src="/images/icon-email.png"/><a href=""></a>
+              <img src="/images/Icon-GitHub.png"/><a href=""></a>
+              <img src="/images/icon-linked-in.png"><a href=""></a>
               <p class="bio"></p>
             </div>
             <div class="back">
@@ -88,6 +94,9 @@
             <div class="front">
               <img src="/images/kay.jpg" class="circularImage" id="kay">
               <h3 class="dev-name">Kaylee Alvarado | Human Being</h3>
+              <a href="kaymay1000@gmail.com"><img src="/images/icon-email.png"/></a>
+              <a href="https://github.com/kaymay1000"><img src="/images/Icon-GitHub.png"/></a>
+              <img src="/images/icon-linked-in.png"><a href=""></a>
               <p class="bio">Originally from Issaquah, WA, Kaylee was first introduced to coding during her freshman year of college. She ultimately decided that a four-year university wasn't for her, so she signed up for a JavaScript 101 course at Code Fellows and hasn't looked back since. Once she finishes her education, she hopes to land a job as a junior full-stack JS developer in San Francisco.</p>
             </div>
             <div class="back">
@@ -102,6 +111,9 @@
             <div class="front">
               <img src="/images/teddy.jpg" class="circularImage" id="teddy">
               <h3 class="dev-name">David Teddy | Human Being</h3>
+              <img src="/images/icon-email.png"/><a href=""></a>
+              <img src="/images/Icon-GitHub.png"/><a href=""></a>
+              <img src="/images/icon-linked-in.png"><a href=""></a>
               <p class="bio">David Teddy was a military man who loved the life until tragically got medically retired. He realized after not making enough to support his family he needed a life change and always loved coding and decided to become a hacker. After doing a ton of research decided to become part of the Code Fellows family and realized he loved the life of coding.</p>
             </div>
             <div class="back">
