added bio's need to add abigails soial media

--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
           <div class="flipper">
             <div class="front">
               <img src="/images/abbi.jpg" class="circularImage" id="abbi">
-              <h3 class="dev-name">Abigail White | Person</h3>
+              <h3 class="dev-name">Abigail White | Alien</h3>
               <p class="bio">Abigail White was born on March 26, 1985, in London, England. She made her film debut at the age of 9 in A Village Affair (1994). Her first major part came in Star Wars: Episode 1-The Phantom Menace and then for her role as Juliette "Jules" Paxton in Bend It Like Beckham. Her later films include Atonement, Pirates of the Caribbean, A Dangerous Method and Anna Karenina. She has also earned Oscar nominations for her roles in Pride and Prejudice and The Imitation Game.</p>
             </div>
             <div class="back">
@@ -79,9 +79,9 @@
           <a href="https://www.linkedin.com/in/robert-hatfield-963a17129/"><img src="/images/icon-linked-in.png"></a>
           <div class="flipper">
             <div class="front">
-              <img src="" class="circularImage" id="robert">
-              <h3 class="dev-name">Robert Hatfield | Human Being</h3>
-              <p class="bio"></p>
+              <img src="/images/robert.jpg" class="circularImage" id="robert">
+              <h3 class="dev-name">Robert Hatfield | Just This Guy, You Know?</h3>
+              <p class="bio">After working for 16 years in telecommunications, a business reorganization prompted him to pursue a new career. Returning to a childhood interest in programming, he is now studying JavaScript and iOS development at Code Fellows in Seattle, WA.</p>
             </div>
             <div class="back">
               <img src="/images/peanut.jpg" class="circularImage dogImage" id="robertDog">
@@ -97,7 +97,7 @@
           <div class="flipper">
             <div class="front">
               <img src="/images/kay.jpg" class="circularImage" id="kay">
-              <h3 class="dev-name">Kaylee Alvarado | Human Being</h3>
+              <h3 class="dev-name">Kaylee Alvarado | Legal Adult</h3>
               <p class="bio">Originally from Issaquah, WA, Kaylee was first introduced to coding during her freshman year of college. She ultimately decided that a four-year university wasn't for her, so she signed up for a JavaScript 101 course at Code Fellows and hasn't looked back since. Once she finishes her education, she hopes to land a job as a junior full-stack JS developer in San Francisco.</p>
             </div>
             <div class="back">
@@ -114,7 +114,7 @@
           <div class="flipper">
             <div class="front">
               <img src="/images/teddy.jpg" class="circularImage" id="teddy">
-              <h3 class="dev-name">David Teddy | Human Being</h3>
+              <h3 class="dev-name">David Teddy | Avid Book Nerd</h3>
               <p class="bio">David Teddy was a military man who loved the life until tragically got medically retired. He realized after not making enough to support his family he needed a life change and always loved coding and decided to become a hacker. After doing a ton of research decided to become part of the Code Fellows family and realized he loved the life of coding.</p>
             </div>
             <div class="back">
