read me and about me css

--- a/public/index.html
+++ b/public/index.html
@@ -90,10 +90,8 @@
             </div>
           </div>
         </div>
+
         <div class="flip-container">
-          <a href="kaymay1000@gmail.com"><img src="/images/icon-email.png"/></a>
-          <a href="https://github.com/kaymay1000"><img src="/images/Icon-GitHub.png"/></a>
-          <a href="www.linkedin.com/in/kaylee-alvarado"><img src="/images/icon-linked-in.png"></a>
           <div class="flipper">
             <div class="front">
               <img src="/images/kay.jpg" class="circularImage" id="kay">
@@ -106,7 +104,13 @@
               <p class="bio">Joe-Joe hails from Idaho, and <em>loves</em> being treated like the prince that he is. He'll go for the occasional walk, but he mostly enjoys lying around on the couch, getting his tummy rubbed, or eating roast chicken. Squirrels and men wearing hats are his only nemeses-- other than that, he's a lover, not a fighter.</p>
             </div>
           </div>
+          <div class="icons">
+          <a href="kaymay1000@gmail.com"><img src="/images/icon-email.png"/></a>
+          <a href="https://github.com/kaymay1000"><img src="/images/Icon-GitHub.png"/></a>
+          <a href="www.linkedin.com/in/kaylee-alvarado"><img src="/images/icon-linked-in.png"></a>
         </div>
+        </div>
+
         <div class="flip-container">
           <a href=""><img src="/images/icon-email.png"/></a>
           <a href=""><img src="/images/Icon-GitHub.png"/></a>
