css browser styling

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,7 @@
         <input id="zipInput" type="numbers" name="postal-code" />
         <button id="homeSubmitButton" type="submit">Fetch!</button>
       </form>
+      <div id="form-div"></div>
 
     <section id="results" class="tab-content">
       <!-- <h2>Results</h2> -->
