--- a/public/index.html
+++ b/public/index.html
@@ -63,14 +63,14 @@
           <a href=""><img src="/images/icon-linked-in.png"></a>
           <div class="flipper">
             <div class="front">
-              <img src="/images/abbi.jpg" class="circularImage" id="abbi">
+              <img src="/images/abbi.jpg" class="circularImage">
               <h3 class="dev-name">Abigail White | Alien</h3>
               <p class="bio">Abigail White was born on March 26, 1985, in London, England. She made her film debut at the age of 9 in A Village Affair (1994). Her first major part came in Star Wars: Episode 1-The Phantom Menace and then for her role as Juliette "Jules" Paxton in Bend It Like Beckham. Her later films include Atonement, Pirates of the Caribbean, A Dangerous Method and Anna Karenina. She has also earned Oscar nominations for her roles in Pride and Prejudice and The Imitation Game.</p>
             </div>
             <div class="back">
-              <img src="/images/hobbes.jpg" class="circularImage dogImage" id="abbiDog">
+              <img src="/images/hobbes.jpg" class="circularImage dogImage">
               <h3 class="dog-name">Hobbes | Maltese Mix</h3>
-              <p class="bio">Hobbes is a fun-loving Maltese who spreads his Joy at every opportunity. He has been in love exactly one time with a small pup named Lily, until her family tragically moved away. Although Hobbes has never fully recovered, he has found purpose in other meaningful pursuits, such as running around in circles. He loves belly rubs, tug-of-war and sweet potatoes (stovetop cooked, not microwaved). Someday he hopes to catch a squirrel or a cat or something, even though he's not sure what he would do with it if he did.</p>
+              <p class="dog-bio">Hobbes is a fun-loving Maltese who spreads his Joy at every opportunity. He has been in love exactly one time with a small pup named Lily, until her family tragically moved away. Although Hobbes has never fully recovered, he has found purpose in other meaningful pursuits, such as running around in circles. He loves belly rubs, tug-of-war and sweet potatoes (stovetop cooked, not microwaved). Someday he hopes to catch a squirrel or a cat or something, even though he's not sure what he would do with it if he did.</p>
             </div>
           </div>
         </div>
@@ -80,36 +80,34 @@
           <a href="https://www.linkedin.com/in/robert-hatfield-963a17129/"><img src="/images/icon-linked-in.png"></a>
           <div class="flipper">
             <div class="front">
-              <img src="/images/robert.jpg" class="circularImage" id="robert">
+              <img src="/images/robert.jpg" class="circularImage">
               <h3 class="dev-name">Robert Hatfield | Just This Guy, You Know?</h3>
               <p class="bio">After working for 16 years in telecommunications, a business reorganization prompted him to pursue a new career. Returning to a childhood interest in programming, he is now studying JavaScript and iOS development at Code Fellows in Seattle, WA.</p>
             </div>
             <div class="back">
-              <img src="/images/peanut.jpg" class="circularImage dogImage" id="robertDog">
+              <img src="/images/peanut.jpg" class="circularImage dogImage">
               <h3 class="dog-name">Peanut | Miniature Dachshund</h3>
-              <p class="bio">Peanut was a Miniature Dachshund whose personality was anything but miniature. He enjoyed eating carrots, playing tug-of-war with his favorite blanket, and challenging the neighbors' <em>(wonderfully tolerant)</em> pit bull. He lived a full life with his older companion Muttski, a Great Dane / Labrador mix, and is remembered with fondness by his family.</p>
+              <p class="dog-bio">Peanut was a Miniature Dachshund whose personality was anything but miniature. He enjoyed eating carrots, playing tug-of-war with his favorite blanket, and challenging the neighbors' <em>(wonderfully tolerant)</em> pit bull. He lived a full life with his older companion Muttski, a Great Dane / Labrador mix, and is remembered with fondness by his family.</p>
             </div>
           </div>
         </div>
 
         <div class="flip-container">
+          <a href="kaymay1000@gmail.com"><img src="/images/icon-email.png"/></a>
+          <a href="https://github.com/kaymay1000"><img src="/images/Icon-GitHub.png"/></a>
+          <a href="www.linkedin.com/in/kaylee-alvarado"><img src="/images/icon-linked-in.png"></a>
           <div class="flipper">
             <div class="front">
-              <img src="/images/kay.jpg" class="circularImage" id="kay">
+              <img src="/images/kay.jpg" class="circularImage">
               <h3 class="dev-name">Kaylee Alvarado | Legal Adult</h3>
               <p class="bio">Originally from Issaquah, WA, Kaylee was first introduced to coding during her freshman year of college. She ultimately decided that a four-year university wasn't for her, so she signed up for a JavaScript 101 course at Code Fellows and hasn't looked back since. Once she finishes her education, she hopes to land a job as a junior full-stack JS developer in San Francisco.</p>
             </div>
             <div class="back">
-              <img src="/images/joejoe.jpg" class="circularImage dogImage" id="kayDog">
+              <img src="/images/joejoe.jpg" class="circularImage dogImage">
               <h3 class="dog-name">Joe-Joe | Bichon Frise</h3>
-              <p class="bio">Joe-Joe hails from Idaho, and <em>loves</em> being treated like the prince that he is. He'll go for the occasional walk, but he mostly enjoys lying around on the couch, getting his tummy rubbed, or eating roast chicken. Squirrels and men wearing hats are his only nemeses-- other than that, he's a lover, not a fighter.</p>
+              <p class="dog-bio">Joe-Joe hails from Idaho, and <em>loves</em> being treated like the prince that he is. He'll go for the occasional walk, but he mostly enjoys lying around on the couch, getting his tummy rubbed, or eating roast chicken. Squirrels and men wearing hats are his only nemeses-- other than that, he's a lover, not a fighter.</p>
             </div>
           </div>
-          <div class="icons">
-          <a href="kaymay1000@gmail.com"><img src="/images/icon-email.png"/></a>
-          <a href="https://github.com/kaymay1000"><img src="/images/Icon-GitHub.png"/></a>
-          <a href="www.linkedin.com/in/kaylee-alvarado"><img src="/images/icon-linked-in.png"></a>
-        </div>
         </div>
 
         <div class="flip-container">
@@ -125,7 +123,7 @@
             <div class="back">
               <img src="/images/herley.jpg" class="circularImage dogImage" id="teddyDog">
               <h3 class="dog-name">Herley | Dalmation Mix</h3>
-              <p class="bio">Hurley is a 3 year old dalmatian mix. He is a lover of fetch and cuddles. He doesn't like people knocking on his door or dogs peeing in his territory. He likes long walks and jumping for a frisbee and chasing a ball around. He sounds fercious when chasing you but in all actuality he's a lover not a fighter. Treats and attention is what he lives for.</p>
+              <p class="dog-bio">Hurley is a 3 year old dalmatian mix. He is a lover of fetch and cuddles. He doesn't like people knocking on his door or dogs peeing in his territory. He likes long walks and jumping for a frisbee and chasing a ball around. He sounds fercious when chasing you but in all actuality he's a lover not a fighter. Treats and attention is what he lives for.</p>
             </div>
           </div>
         </div>
