--- a/public/index.html
+++ b/public/index.html
@@ -58,9 +58,12 @@
       <h2>About The Developers</h2>
       <div class="twoByTwo">
         <div class="flip-container">
-          <a href=""><img src="/images/icon-email.png"/></a>
-          <a href=""><img src="/images/Icon-GitHub.png"/></a>
-          <a href=""><img src="/images/icon-linked-in.png"></a>
+          <hr>
+          <div>
+            <a href=""><img src="/images/icon-email.png" class="icons"/></a>
+            <a href=""><img src="/images/Icon-GitHub.png" class="icons"/></a>
+            <a href=""><img src="/images/icon-linked-in.png" class="icons"/></a>
+          </div>
           <div class="flipper">
             <div class="front">
               <img src="/images/abbi.jpg" class="circularImage">
@@ -75,9 +78,12 @@
           </div>
         </div>
         <div class="flip-container">
-          <a href="robert@lucidthought.xyz"><img src="/images/icon-email.png"/></a>
-          <a href="https://github.com/robert-hatfield/"><img src="/images/Icon-GitHub.png"/></a>
-          <a href="https://www.linkedin.com/in/robert-hatfield-963a17129/"><img src="/images/icon-linked-in.png"></a>
+          <hr>
+          <div>
+          <a href="robert@lucidthought.xyz"><img src="/images/icon-email.png" class="icons"/></a>
+          <a href="https://github.com/robert-hatfield/"><img src="/images/Icon-GitHub.png" class="icons"/></a>
+          <a href="https://www.linkedin.com/in/robert-hatfield-963a17129/"><img src="/images/icon-linked-in.png" class="icons"/></a>
+        </div>
           <div class="flipper">
             <div class="front">
               <img src="/images/robert.jpg" class="circularImage">
@@ -91,11 +97,13 @@
             </div>
           </div>
         </div>
-
         <div class="flip-container">
-          <a href="kaymay1000@gmail.com"><img src="/images/icon-email.png"/></a>
-          <a href="https://github.com/kaymay1000"><img src="/images/Icon-GitHub.png"/></a>
-          <a href="www.linkedin.com/in/kaylee-alvarado"><img src="/images/icon-linked-in.png"></a>
+          <hr>
+          <div>
+            <a href="kaymay1000@gmail.com"><img src="/images/icon-email.png" class="icons"/></a>
+            <a href="https://github.com/kaymay1000"><img src="/images/Icon-GitHub.png" class="icons"/></a>
+            <a href="www.linkedin.com/in/kaylee-alvarado"><img src="/images/icon-linked-in.png" class="icons"/></a>
+        </div>
           <div class="flipper">
             <div class="front">
               <img src="/images/kay.jpg" class="circularImage">
@@ -111,9 +119,12 @@
         </div>
 
         <div class="flip-container">
-          <a href=""><img src="/images/icon-email.png"/></a>
-          <a href=""><img src="/images/Icon-GitHub.png"/></a>
-          <a href=""><img src="/images/icon-linked-in.png"></a>
+          <hr>
+          <div>
+            <a href=""><img src="/images/icon-email.png" class="icons"/></a>
+            <a href=""><img src="/images/Icon-GitHub.png" class="icons"/></a>
+            <a href=""><img src="/images/icon-linked-in.png" class="icons"/></a>
+          </div>
           <div class="flipper">
             <div class="front">
               <img src="/images/teddy.jpg" class="circularImage" id="teddy">
