--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>MeetPup</title>
-  <link rel="icon" type="image/png" href="/images/logo/logo-paw.png" />
+  <link rel="icon" type="image/png" href="/images/logo/Logo-paw.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/vendor/styles/normalize.css">
   <link rel="stylesheet" href="/styles/base.css">
