--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,6 @@
       <div id="form-div"></div>
 
     <section id="results" class="tab-content">
-      <!-- <h2>Results</h2> -->
       <p id="message"></p>
 
 
@@ -151,15 +150,11 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.4/handlebars.js"></script>
   <script src="/vendor/scripts/page.js"></script>
-  <!-- models -->
-
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPM0MjFCROm6alfbME3NmOwuXIHev6WVM"></script>
+  <!-- local scripts -->
   <script src="/scripts/model/results.js"></script>
-  <!-- views -->
   <script src="/scripts/view/aboutView.js"></script>
   <script src="/scripts/view/resultsView.js"></script>
-
-  <!-- controllers -->
   <script src="/scripts/controller/aboutController.js"></script>
   <script src="/scripts/controller/homeController.js"></script>
   <script src="/scripts/controller/resultsController.js"></script>
