--- a/public/index.html
+++ b/public/index.html
@@ -147,6 +147,7 @@
 
   <!-- script tags  -->
   <!-- libraries -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.4/handlebars.js"></script>
   <script src="/vendor/scripts/page.js"></script>
